[gd_scene load_steps=8 format=2]

[ext_resource path="res://content/dome/shredder/Shredder.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Bastards/crunch_03.wav" type="AudioStream" id=2]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://content/sounds/Bastards/crunch_02.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Bastards/crunch_04.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Bastards/crunch_01.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71, 36 )

[node name="Shredder" type="Area2D"]
collision_layer = 0
collision_mask = 64
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="DropPickupShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -31.5 )
shape = SubResource( 1 )

[node name="ShredPoint" type="Position2D" parent="."]

[node name="ShredSound" parent="ShredPoint" instance=ExtResource( 3 )]
bus = "Dome"
maxAudibleDistance = 350.0
minAudibleDistance = 80.0

[node name="ShredLayer" parent="ShredPoint/ShredSound" instance=ExtResource( 3 )]
bus = "Dome"
maxAudibleDistance = 350.0
minAudibleDistance = 80.0
streams = [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ]

[connection signal="area_entered" from="." to="." method="_on_Shredder_area_entered"]
